<resources>
    <string name="app_name">lisTify</string>
    <string name="Home">Home</string>
    <string name="Daftar">Daftar</string>
    <string name="History">History</string>
    <string name="Pengaturan">Pengaturan</string>
    <string name="Exit">Exit</string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="buttonMovies">Movies</string>
    <string name="buttonTVSeries">TV Series</string>
    <string name="filter">Filter</string>
    <string name="Sort">Sort</string>
    <string name="Tidak">Tidak</string>
    <string name="Ya">Ya</string>
    <string name="confirm">Yakin hapus</string>
    <string name="confirmTitle">Konfirmasi Hapus</string>
</resources>