<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_box"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/movies_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonMovies"/>
        <Button
            android:id="@+id/series_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonTVSeries"/>
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filterbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"/>
        <Button
            android:id="@+id/sort_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sort"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />



</LinearLayout>